<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.j32u4ukh.androidlearning.Example.UserAreaActivity">

    <TextView
        android:id="@+id/showUserInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showUserInfo" />

    <TextView
        android:id="@+id/textUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Username" />

    <TextView
        android:id="@+id/textAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Age" />

</LinearLayout>
